# libUSVMessage

./: .gitignore  CMakeLists.txt  README.md  test.c  报文定义.md
src/: .message_type.c.swp  CMakeLists.txt  crc16.c  crc16.h  message.c  message.cpp  message.h  message_buf.c  message_type.c  msg_type.h  usv_message.h
src/include/: msg_type.h  usv_message.h
